fixed it on mobile and added some preliminary comments

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,5 +1,5 @@
 #strip {
-  width: 98vw;
+  width: 97vw;
   height: 50px;
   display: flex;
   flex-direction: row;
